--- a/src/app.module.css
+++ b/src/app.module.css
@@ -1,12 +1,20 @@
+.list {
+  display: flex;
+  flex-flow: column wrap;
+  height: 80vh;
+  gap: 2px;
+  padding: 0 20px;
+}
+
 .deck {
+  width: 300px;
   font-family: 'Open Sans', sans-serif;
   line-height: 1.5;
   color: #333;
   display: flex;
   flex-direction: column;
 }
-.deck:not(:first-child) {
-  margin-bottom: 1em;
+.deck em {
   padding-left: 1em;
 }
 
